--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: java
 
 services:
   - mysql
-
+before_install:
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS hello_test;'
+  
+  
+  
+  
 
