--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,8 @@ before_install:
 
 env: 
   -DATABASE=jdbc:mysql://localhost:3306/hello_test DB_USERNAME=travis DB_PASSWORD=""
+  -SPRING_DATASOURCE_DRIVERCLASSNAME=com.mysql.jdbc.Driver
+  -SPRING_DATASOURCE_URL= jdbc:mysql://localhost:3306/hello_test
+  -SPRING_DATASOURCE_USERNAME=travis
+  -SPRING_DATASOURCE_PASSWORD=""
 
